--- a/src/pages/press/index.astro
+++ b/src/pages/press/index.astro
@@ -24,7 +24,7 @@ const fastFacts = [
   { k: 'Type', v: 'Independent, non-profit foundation' },
   { k: 'Focus', v: 'Open protocols, security, privacy' },
   { k: 'HQ', v: 'Baltimore, Maryland, USA' },
-  { k: 'Projects', v: 'Cypherlots, Journal Core Protocol (draft)' },
+  { k: 'Projects', v: 'Cipherlots, Journal Core Protocol (draft)' },
 ];
 
 const brand = {
