--- a/src/pages/who-we-are.astro
+++ b/src/pages/who-we-are.astro
@@ -102,7 +102,7 @@ const meta = {
           <div class="badge">Build</div>
           <h3>Become a builder</h3>
           <p>
-            Contribute to vaults, cypherlots, SDKs, docs, and tooling. We collaborate in the open and welcome
+            Contribute to vaults, cipherlots, SDKs, docs, and tooling. We collaborate in the open and welcome
             systems engineers, designers, writers, and security reviewers.
           </p>
           <a
