Replace China problem references with neutral threat language

--- a/src/pages/stack.astro
+++ b/src/pages/stack.astro
@@ -142,9 +142,10 @@ import BaseLayout from "../layouts/BaseLayout.astro";
           </div>
         </div>
 
-        <blockquote class="china-problem">
-          "Even though the data is encrypted, you still don't want it shared with everyone on the Internet. You don't want China
-          to download all your data and then build a post-quantum computer and decrypt everything you've ever said."
+        <blockquote class="harvest-threat">
+          "Even though the data is encrypted, you still don't want it shared with everyone on the Internet. You don't want a
+          state-level adversary to vacuum it up today, wait for new decryption capabilities, and unlock everything you've ever
+          said."
         </blockquote>
 
         <ul class="solutions">
@@ -387,7 +388,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       padding-left: var(--space-lg);
     }
 
-    .china-problem {
+    .harvest-threat {
       margin: var(--space-2xl) auto var(--space-xl);
       max-width: 720px;
       background: var(--void-lighter);
