--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -50,6 +50,9 @@ const currentPath = Astro.url.pathname;
         <li><a href="/journalnet" class:list={[{ active: currentPath === '/journalnet' }]}>JournalNet</a></li>
         <li><a href="/learn" class:list={[{ active: currentPath.startsWith('/learn') }]}>Learn</a></li>
         <li><a href="/build" class:list={[{ active: currentPath === '/build' }]}>Build</a></li>
+        <li>
+          <a href="https://privatelocalchat.com" target="_blank" rel="noopener">Chat</a>
+        </li>
 
       </ul>
     </nav>
