Update chat link to privatelocal.chat

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -51,7 +51,7 @@ const currentPath = Astro.url.pathname;
         <li><a href="/learn" class:list={[{ active: currentPath.startsWith('/learn') }]}>Learn</a></li>
         <li><a href="/build" class:list={[{ active: currentPath === '/build' }]}>Build</a></li>
         <li>
-          <a href="https://privatelocalchat.com" target="_blank" rel="noopener">Chat</a>
+          <a href="https://privatelocal.chat" target="_blank" rel="noopener">Chat</a>
         </li>
 
       </ul>
